--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -4,7 +4,9 @@
 :id: 6Z40YCT
 :author: team-plenty-channel
 
-Diese Handbuchseite beschreibt den Datenimport in plentymarkets mit dem Import-Tool. Ein Import von Daten ist ratsam, wenn du z.B. neue Artikel, Kund:innen-Daten oder Lagerbestände in dein plentymarkets System einpflegen möchtest und die Daten bereits digital vorliegen. Das Import-Tool ermöglicht es über das Erstellen von Importen, Datenimporte auszuführen. Ein Import kann manuell oder automatisiert erfolgen.
+Diese Handbuchseite beschreibt den Datenimport in plentymarkets mit dem Import-Tool. Ein Import von Daten ist ratsam, wenn du zum Beispiel neue Artikel, Kund:innen-Daten oder Lagerbestände in dein plentymarkets System einpflegen möchtest und die Daten bereits digital vorliegen. Mit dem Import-Tool erstellst du Importe, mit denen du die Datenimporte ausfürst. Du kannst Daten manuell oder automatisiert importieren.
+
+TIP: Du kennst das Import-Tool noch nicht? Dann xref::page$import-tool-intro.adoc#[mache dich erst mit dem Tool vertraut].
 
 [#1700]
 == Grundeinrichtung: Datenimport mit Assistenten durchführen
@@ -25,7 +27,6 @@ Du findest den Assistenten *Kontaktdatenimport* im Menü *Einrichtung » Assiste
 * Du lädst die Importvorlage als CSV-Datei herunter. Ergänze deine Daten in dieser Datei. Beachte, dass die ersten 3 Zeilen der Datei nicht geändert werden dürfen.
 
 Um deine Kontaktdaten zu importieren, kannst du den Assistenten <<#1200, Daten hochladen>> verwenden. Alternativ kannst du die Importdatei auch im Menü *Daten » Import* manuell hochladen.
-
 
 [#1900]
 === Assistent "Artikelimport" durchlaufen
@@ -54,75 +55,10 @@ Du findest den Assistent *Daten hochladen* im Menü *Einrichtung » Assistenten 
 
 Anschließend kannst du den über den Assistenten erstellten Import in der Übersicht im Menü *Daten » Import* sehen. Ein Abgleich ist hier nicht vorhanden, da es sich um neue Daten handelt. Im Tab *Zuordnung* des Imports wurden bereits alle Felder deiner CSV-Datei automatisch den plentymarkets Datenfeldern zugewiesen.
 
-[#imports-intro]
-== Importe kennenlernen
-
-Du kennst die Importe noch nicht? Dann bist du hier richtig.
-
-[#imports-define]
-=== Was sind Importe?
-
-Ein Import dient dazu, die Daten einer per Webspace oder HTTPS zugänglichen Datei in plentymarkets zuzuordnen und zu importieren.
-
-Die grundsätzliche Funktionsweise zum Erstellen und Ausführen eines Imports ist für alle Import-Typen gleich und wird hier einmal übergreifend beschrieben.
-
-Importe erstellst, bearbeitest und verwaltest du im Menü *Daten » Import*.
-
-[#imports-define]
-=== Videoeinführung: Erste Schritte mit dem Import-Tool
-
-Du bist noch neu in Sachen Importe? Dann empfehlen wir unser Einführungsvideo.
-
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt. Eine Gute Einführung in das Thema bietet das Video trotzdem.
-
-video::322201964[vimeo]
-
-[#imports-terms]
-=== Wichtige Begriffe
-
-*Import* = Import kann sowohl den Importvorgang bedeuten als auch die Summe aller Einstellungen für Importvorgänge. Im Menü *Daten » Import* siehst du eine Liste aller Importe.
-
-*Import-Typen* = Je nachdem, welche Arten von Daten du importieren möchtest, verwendest du unterschiedliche Import-Typen. Jeder Import-Typ legt die Daten beim Import in unterschiedlichen Bereichen von plentymarkets ab. +
-*_Beispiele für Import-Typen:_* Artikel, Eigenschaften, Gutschein-Codes, Hersteller etc. (Eine vollständige Liste findest du <<#1210, hier.)
-
-*Datenquelle* = Die Importdatei. Diese Datei kannst du manuell hochladen. Du kannst aber auch einen Speicherort für die Datei angeben. Du kannst Dateien nutzen, die per HTTPS, FTP oder SFTP erreichbar sind. Für solche Dateien kannst du ein Importintervall festlegen. Die Dateien werden also automatisch immer wieder importiert.
-
-*Abgleich* = Mit dem Abgleich bestimmst du, anhand welcher Daten versucht wird zu identifizieren, ob es in plentymarkets schon einen Datensatz gibt oder nicht. +
-// TODO: Beispiel einfügen *_Beispiel:_* Du möchtest Artikeldaten importieren.
-
-*Zuordnung* = Mit der Zuordnung legst du fest, welche Spalte deiner Datei welchem Datenfeld in plentymarkets entspricht. +
-*_Beispiel:_* In deiner Datei gibt es eine Spalte *Produkt-ID*. Du möchtest, dass diese Produkt-ID in plentymarkets als Artikel-ID importiert wird. Du ordnest also der Spalte *Produkt-ID* das plentymarkets Feld *Artikel-ID* zu.
-
-[#import-videos]
-=== Videoeinführung: Manueller und automatischer Import
-
-Du bist noch neu in Sachen Importe? Dann schau dir erst einmal die folgenden beiden Videos über den Datenimport an.
-
-*_Hinweis zu den Videos:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt. Eine Gute Einführung in das Thema bieten die Videos trotzdem.
-
-[tabs]
-====
-Video zum manuellen Import::
-+
---
-In diesem Video erfährst du, wie du Dateien manuell importierst.
-
-video::321227748[vimeo]
---
- 
-Video zum automatischen Import::
-+
---
-In diesem Video erfährst du, wie du plentymarkets so konfigurierst, dass neue Dateien automatisch importiert und alte Dateien archiviert werden.
-
-video::322203826[vimeo]
---
-====
-
 [#1210]
 == Import erstellen
 
-Nun wird es Zeit, deinen ersten Import zu erstellen.
+Erstelle einen Import.
 
 [.instruction]
 Import erstellen:
@@ -139,7 +75,7 @@ Import erstellen:
 
 [[tabelle-sync-erstellen]]
 .Import erstellen
-[cols="1,3"]
+[cols="1,3a"]
 |===
 |Einstellung |Erläuterung
 
@@ -224,7 +160,7 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 !===
 ! *Manueller Upload*
 !
-. Im Feld *Dateiname* auf *Datei wählen* (icon:more_horiz[set=material]) klicken. +
+. Klicke im Feld *Dateiname* auf *Datei wählen* (icon:more_horiz[set=material]). +
 → Die im Webspace gespeicherten Dateien werden angezeigt.
 . Klicke auf *Datei hochladen* (icon:file_upload[set=material]). +
 . Wähle eine lokale Datei. +
@@ -232,27 +168,28 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 *_Hinweis:_* Standardmäßig ist die Option *Datei löschen, nachdem der Import ausgeführt wurde* aktiviert. Die Datei wird also automatisch vom Webspace gelöscht, nachdem die Daten importiert wurden. Wenn die Datei im Webspace gespeichert bleiben soll, deaktiviere diese Option. *_Das Speichern der Datei auf dem Webspace ist kostenpflichtig._*
 
 ! *FTP*
-! _Ab 21.07.2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze deshalb diese Option nicht._
+! *_Ab 21.07.2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze diese Option deshalb nicht._*
 
 ! *HTTPS*
-! *Externe URL* wählen.
-
-* *Externe URL* = URL eingeben, unter der die Importdatei erreichbar ist. +
-*_Tipp:_* Speichere die Datei auf dem plentymarkets Webspace.
-* *Authentifizierung*: Wählen, ob für den Zugriff auf die Datei eine Authentifizierung erforderlich ist oder nicht.
-** *keine* = keine Authentifizierung erforderlich
-** *HTTP-Authentifizierung* = Authentifizierung per Benutzer:in und Passwort erforderlich
-// In Konfig ändern.
+!
+. Gib in das Feld *URL* die URL ein, unter der die Importdatei erreichbar ist.  +
+*_Tipp:_* Speichere die Datei auf dem plentymarkets Webspace. +
+*_Das Speichern der Datei auf dem Webspace ist kostenpflichtig._*
+. Wähle, ob eine *Authentifizierung* erforderlich ist, um auf die Datei zuzugreifen.
+  * *keine* = keine Authentifizierung erforderlich
+  * *HTTP-Authentifizierung* = Authentifizierung per Benutzer:in und Passwort erforderlich
+. Wenn du *HTTP-Authentifizierung* gewählt hast, gib *Benutzername* und *Passwort* ein.
 
 ! *SFTP*
-! _Ab 21.07.2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze deshalb diese Option nicht._
+! *_Ab 21.07.2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze diese Option deshalb nicht._*
 !===
+
 |===
 
 [#1300]
 == Importoptionen festlegen
 
-Die Importoptionen befinden sich im Bereich *Abgleich* und gelten sowohl für den Abgleich als auch für die Zuordnung.
+Die Importoptionen findest du im Bereich *Abgleich*. Diese Importoptionen gelten für den Abgleich und für die Zuordnung.
 
 [.instruction]
 Importoptionen festlegen:
@@ -261,96 +198,247 @@ Importoptionen festlegen:
 → Die Import-Übersicht wird geöffnet.
 . Klicke in der Import-Übersicht auf den Import. +
 → Die Einstellungen werden geöffnet.
-. Wechsele in das Tab *Abgleich*.
+. Wechsele in die Ansicht *Abgleich*.
 . Lege die Importoptionen fest. Beachte dazu die Erläuterungen in <<tabelle-Sync-Importoptionen>>.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [[tabelle-Sync-Importoptionen]]
 .Importoptionen für Importe
-[cols="1,2"]
+[cols="1,4a"]
 |===
 |Importoption |Erläuterung
 
-| *Importoption wählen*
-a|
+| *Importoptionen*
+| Wie sollen die Daten importiert werden?
 
-* *Neue Daten importieren, vorhandene aktualisieren* = Wenn anhand der Abgleichfelder keine übereinstimmenden Daten gefunden werden, wird ein neuer Datensatz, z.B. ein neuer Artikel oder ein neuer Auftrag, hinzugefügt. Gleichzeitig werden bereits vorhandene Daten aktualisiert.
-* *Nur vorhandene Daten aktualisieren* = Vorhandene Daten werden aktualisiert. Wenn anhand der Abgleichfelder keine übereinstimmenden Daten gefunden werden, wird der Datensatz nicht importiert.
-* *Nur neue Daten importieren* = Es werden ausschließlich neue Datensätze importiert, für die anhand der Abgleichfelder keine übereinstimmenden Daten gefunden werden.
+* *Neue Daten importieren, vorhandene aktualisieren* = Wenn anhand der Abgleichfelder keine übereinstimmenden Datensätze gefunden werden, wird ein neuer Datensatz hinzugefügt, zum Beispiel ein neuer Artikel oder ein neuer Auftrag. Vorhandene Datensätze werden aktualisiert.
+* *Nur vorhandene Daten aktualisieren* = Vorhandene Datensätze werden aktualisiert. Wenn anhand der Abgleichfelder keine übereinstimmenden Datensätze gefunden werden, wird der Datensatz nicht importiert.
+* *Nur neue Daten importieren* = Nur neue Datensätze werden importiert, für die anhand der Abgleichfelder keine übereinstimmenden Datensätze gefunden werden.
 
 | *Dezimalzahl*
-a| *Deutsche Schreibweise* oder *Englische Schreibweise* wählen.
+| Wie sind Dezimalzahlen in der Importdatei formatiert?
 
-* *Deutsche Schreibweise* = Dezimalzahlen werden kommasepariert angegeben und ein Punkt dient als Tausendertrennzeichen.
-* *Englische Schreibweise* = Dezimalzahlen werden punktsepariert angegeben und ein Komma dient als Tausendertrennzeichen.
+* *Deutsche Schreibweise* = Dezimalzahlen werden kommagetrennt angegeben. Als Tausendertrennzeichen wird ein Punkt verwendet. +
+  *_Beispiele:_* 13,95 Euro, 15.000 Stück
+* *Englische Schreibweise* = Dezimalzahlen werden punktgetrennt angegeben. Als Tausendertrennzeichen wird ein Komma verwendet. +
+  *_Beispiele:_* 13.95 Euro, 15,000 Stück
 
 | *Datumsformat*
-|Datumsformat eingeben. Wenn die Datumsangaben in der Datei dem Standardformat Y-m-d H:i:s entsprechen, muss nichts eingegeben werden. Andere Formate müssen eingetragen werden. Zulässig sind alle link:http://php.net/manual/de/function.date.php[php-konformen Datumsformate^].
+| Wie sind Datumsangaben in der Importdatei formatiert? +
+
+Wenn die Datumsangaben in der Datei im Standardformat Y-m-d H:i:s formatiert sind, muss nichts eingegeben werden. Alle anderen Formate müssen angegeben werden. Zulässig sind alle link:http://php.net/manual/de/function.date.php[php-konformen Datumsformate^].
 
 |===
 
 [#1400]
-== Abgleich festlegen
+== Abgleichfelder festlegen
 
-Du hast einen Import erstellt. Öffnen nun diesen Import, um weitere Einstellungen vorzunehmen. Als erstes wählst du die Felder, die zum Abgleichen der Daten verwendet werden sollen. Außerdem legst du fest, was passieren soll, wenn beim Abgleich keine vorhandenen Daten gefunden werden.
+Du hast einen Import erstellt. Öffnen nun diesen Import, um weitere Einstellungen vorzunehmen. Als erstes wählst du die Felder, die zum Abgleichen der Datensätze verwendet werden sollen. Außerdem legst du fest, was passieren soll, wenn beim Abgleich keine vorhandenen Datensätze gefunden werden.
+
+Du kannst ein, mehrere oder alle Abgleichfelder festlegen. Die Abgleichfelder unterscheiden sich für jeden Import-Typ.
 
 [NOTE]
-.Abgleich ist optional
+.Die Abgleichfelder sind optional
 ====
-Die Abgleichfelder sind optionale Einstellungen. Wenn du aber kein Abgleichfeld wählst, können die Daten deiner Datei keinen vorhandenen Daten in deinem System zugeordnet werden. Es werden also beim Import neue Datensätze gespeichert. So kann es zu Du kannst ein, mehrere oder alle Abgleichfelder festlegen. Die angezeigten Abgleichfelder unterscheiden sich für jeden Import-Typ.
+Die Abgleichfelder sind optionale Einstellungen. Wenn du aber kein Abgleichfeld wählst, können die Daten deiner Datei keinen vorhandenen Daten in deinem System zugeordnet werden. Es werden also beim Import neue Datensätze gespeichert. So kann es zu doppelten Datensätzen in deinem System kommen.
 ====
 
 [.instruction]
-Abgleich festlegen:
+Abgleichfelder festlegen:
 
 . Öffne das Menü *Daten » Import*. +
 → Die Import-Übersicht wird geöffnet.
 . Klicke in der Import-Übersicht auf den Import. +
 → Die Einstellungen werden geöffnet.
-. Wechsele in das Tab *Abgleich*.
-. Nimm die Einstellungen vor.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. Wechsele in die Ansicht *Abgleich*.
+. Nimm die Einstellungen vor. +
+*_Tipp:_* Jeder xref::page$import-typen.adoc#[Import-Typ hat andere Abgleichfelder].
+. *Speichere* (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+
+// TODO: Beispiel einfügen
 
 [#1500]
-== Zuordnung erstellen
+== Zuordnungen vornehmen
 
-Mithilfe einer Zuordnung legst du fest, welche Spalte deiner Datei welchem Datenfeld in deinem System entspricht. Ohne Zuordnung können keine Daten importiert werden. Neue Zuordnungen erstellst du im Tab Zuordnung. Für jede neue Zuordnung wird automatisch eine Position vergeben, die bei Bedarf im Tab Einstellungen angepasst werden kann.
+Mit den Zuordnungen legst du fest, welche Spalten deiner Datei welchen Datenfeldern in plentymarkets entsprechen. Ohne Zuordnungen können keine Daten importiert werden. Neue Zuordnungen erstellst du im Tab *Zuordnung*. Für jede neue Zuordnung wird automatisch eine Position vergeben, die bei Bedarf im Tab *Einstellungen* angepasst werden kann.
+
+[#create-mappings]
+=== Zuordnung erstellen
 
 [.instruction]
 Zuordnung erstellen:
 
 . Öffne das Menü *Daten » Import*. +
 → Die Import-Übersicht wird geöffnet.
-. Klicke auf einen Import. +
+. Klicke auf den Import. +
 → Die Einstellungen werden geöffnet.
-. Gehe in das Tab *Zuordnung*.
-. Klicke auf *Zuordnung hinzufügen* (icon:plus-square[role="green"]). +
-→ Ein Fenster wird geöffnet.
+. Wechsele in die Ansicht *Zuordnung*.
+. Klicke auf *Zuordnung hinzufügen* (icon:add[set=material, role="darkGrey"]). +
+→ Das Fenster *Neue Zuordnung* wird geöffnet.
 . Gib einen Namen für die Zuordnung ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die neue Zuordnung wird geöffnet. Die verfügbaren Zuordnungsfelder unterscheiden sich je nach Import-Typ.
-. Wähle Datenfelder für die Zuordnung aus, indem du Häkchen bei diesen Feldern setzt. +
-→ Die gewählten Datenfelder werden zur Zuordnung hinzugefügt.
-. Wähle für jedes Datenfeld eine Spalte aus deiner Datei oder die Option *Eigener Wert*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. Speichere die Einstellung. +
+→ Die neue Zuordnung wird geöffnet. +
+*_Hinweis:_* Die angezeigten Felder unterscheiden sich je nach Import-Typ.
 
-Willst du eine Datei in plentymarkets importieren, aber es fehlen einige wichtige Informationen? Du musst die Datei nicht manuell anpassen! Das Video zeigt dir, wie du mit dem Eigenen Wert die fehlenden Informationen hinzufügst. +
+[#do-mappings]
+=== Datenfelder zuordnen
+
+In der Ansicht *Zuordnung* legst du nun fest, welche Spalte der Datei in welches plentymarkets Datenfeld importiert werden soll.
+
+In der Spalte *Importdaten* werden alle Spalten der Importdatei angezeigt. In der Spalte *plentymarkets Datenfelder* wählst du, welches plentymarkets Datenfeld mit den Daten der Spalte befüllt werden soll.
+
+image::daten:import-mapping-colour.png[]
+
+[.instruction]
+Datenfelder zuordnen:
+
+. Wähle für jede Spalte, die importiert werden soll, ein plentymarkets Datenfeld.
+. *Speichere* (icon:save[set=material, role="darkGrey"]) die Zuordnungen.
+
+[#own-value]
+=== Benutzerdefinierte Zuordnung: Eigener Wert
+
+Die Option *Eigener Wert* erlaubt dir, für ein Datenfeld einen festen Wert zu importieren. Dieser feste Wert ist also für jeden Datensatz gleich, der durch diesen Import importiert wird.
+
+[.collapseBox]
+.Video: Eigenen Wert zuordnen
+--
+Willst du eine Datei in plentymarkets importieren, aber es fehlen einige wichtige Informationen? Du musst die Datei nicht manuell anpassen! Das Video zeigt dir, wie du mit dem Eigenen Wert die fehlenden Informationen hinzufügst.
+
 *_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
 
-.Nutze den Eigenen Wert, um Informationen zu deiner Datei hinzuzufügen
+.Eigenen Wert nutzen, um Importdaten zu ergänzen
 video::328394037[vimeo]
+--
+
+[.instruction]
+Eigenen Wert zuordnen:
+
+. Navigiere in der Ansicht ganz nach unten.
+. Klicke auf *icon:plus[set=material, role="darkGrey") FELD*. +
+→ Eine neue Zeile wird eingefügt. +
+→ Die Quelle *Eigener Wert* ist standardmäßig gewählt.
+. Gib in das Feld *Wert* die Informationen ein, die für alle Datensätze des Imports in das plentymarkets Datenfeld geschrieben werden sollen.
+. Wähle das plentymarkets Datenfeld, in das der Wert importiert werden soll.
+. *Speichere* (icon:save[set=material, role="darkGrey"]) die Zuordnung.
+
+[#1520]
+=== Benutzerdefinierte Zuordnung: Reguläre Ausdrücke
+
+Damit eine CSV- oder TXT-Datei beim Import wie gewünscht berücksichtigt wird, kann die sog. RegEx-Funktion (Regular Expression) genutzt werden. Diese Funktion sorgt dafür, dass Daten beim Import anhand von Befehlen manipuliert werden. In der Importdatei müssen also keine Änderungen mehr vorgenommen werden.
+
+[.collapseBox]
+.Video: Reguläre Ausdrücke
+--
+Lerne in diesem Video mehr über die Anwendung der RegEx-Funktion. +
+
+*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+
+.Ändere deine Daten mit der ReEx-Funktion
+video::329090839[vimeo]
+--
+
+[.instruction]
+Werte über RegEx-Funktion ersetzen:
+
+. Öffne das Menü *Daten » Import*. +
+→ Die Import-Übersicht wird geöffnet.
+. Klicke auf den Import. +
+→ Die Einstellungen werden geöffnet.
+. Wechsele in die Ansicht *Zuordnung*.
+. Klicke auf eine Zuordnung. +
+→ Die Zuordnung wird geöffnet.
+. Klicke auf *icon:plus[set=material, role="darkGrey") FELD*. +
+→ Eine neue Zeile wird eingefügt.
+. Wähle im Feld *Quelle* die Option *Regulärer Ausdruck*. +
+→ Die Optionen für *Regulärer Ausdruck* werden angezeigt.
+. Wähle im Feld *Wert* den Spaltennamen der Importdatei.
+. Gib im Feld *Suchen* ein Search pattern ein.
+. Gib im Feld *Ersetzen* ein Replace pattern ein.
+. Wähle in der Dropdown-Liste *Ziel* das plentymarkets Datenfeld, das befüllt werden soll.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen. +
+→ Die Datenfelder werden beim Import aktualisiert.
 
 [NOTE]
-.Eigener Wert
+.Infos zu RegEx
 ====
-Die Option *Eigener Wert* erlaubt dir, für ein Datenfeld einen festen Wert zu importieren. Dieser feste Wert ist somit für jeden Datensatz, der durch diesen Import importiert wird, gleich.
+Reguläre Ausdrücke sind ein mächtiges Hilfsmittel, aber auch knifflig. Du solltest reguläre Ausdrücke also mit Bedacht und erst nach eingehender Recherche verwenden. Weitere Informationen findest du zum Beispiel hier:
+
+* link:http://php.net/manual/en/reference.pcre.pattern.syntax.php[http://php.net/manual/en/reference.pcre.pattern.syntax.php^]
+* link:https://regexr.com/[https://regexr.com/^] +
+  Auf dieser Seite musst du zuerst die Einstellung der RegEx engine auf PCRE umgestellt werden. Verwende dazu die Dropdown-Liste oben rechts, in der *Javascript* voreingestellt ist.
 ====
 
-[NOTE]
-.Mathematische Berechnungen
-====
-Wähle in der Übersicht der Zuordnung die Quelle *Mathematische Berechnungen*, um Werte der CSV- oder TXT-Datei während des Imports anzupassen. Zur Auswahl stehen die Addition (+++), die Subtraktion (-), die Multiplikation (*), die Division (/) und die Anpassung des Prozentsatzes (+)/(-). Bei dem Wert, der in der CSV- oder TXT-Spalte angepasst wird, muss es sich um eine Zahl handeln.
-====
+[.collapseBox]
+.*_Beispiel 1:_* "TT.MM.YYYY" in "YYYY-MM-TT" ändern
+--
+
+*Wert*: “24.12.2017” +
+*Suchen*: /^(\d+)\.(\d+)\.(\d+)$/ +
+*Ersetzen*: $3﹣$2﹣$1 +
+
+*_Ergebnis:_* “2017-12-24”
+
+--
+
+[.collapseBox]
+.*_Beispiel 2:_* "Nachname, Vorname" in "Vorname Nachname" ändern
+
+--
+
+*Wert*: “Mustermann, Max” +
+*Suchen*: /^(\w+), (\w+)$/ +
+*Ersetzen*: $2 $1 +
+
+*_Ergebnis:_* “Max Mustermann”
+--
+
+[#formula]
+=== Benutzerdefinierte Zuordnung: Mathematische Berechnungen
+
+Wähle in der Übersicht der Zuordnung die Quelle *Mathematische Berechnungen*, um Zahlenwerte der Importdatei während des Imports neu zu berechnen.
+
+Die folgenden Rechenarten sind verfügbar:
+
+* Addition (+++)
+* Subtraktion (-)
+* Multiplikation (*)
+* Division (/)
+* Plus x Prozent (+)
+* Minus x Prozent (-)
+
+[.instruction]
+Werte über mathematische Berechnungen ändern:
+
+. Öffne das Menü *Daten » Import*. +
+→ Die Import-Übersicht wird geöffnet.
+. Klicke auf den Import. +
+→ Die Einstellungen werden geöffnet.
+. Wechsele in die Ansicht *Zuordnung*.
+. Klicke auf eine Zuordnung. +
+→ Die Zuordnung wird geöffnet.
+. Klicke auf *icon:plus[set=material, role="darkGrey") FELD*. +
+→ Eine neue Zeile wird eingefügt.
+. Wähle im Feld *Quelle* die Option *Mathematische Berechnungen*. +
+→ Die Optionen für *Mathematische Berechnungen* werden angezeigt.
+. Wähle aus der Dropdown-Liste *CSV columns* den Spaltennamen der Importdatei.
+. Wähle aus der Dropdown-Liste *Operator* die Rechenart.
+. Gib in das Feld *Wert* einen Zahlenwert ein.
+. Wähle in der Dropdown-Liste *Ziel* das plentymarkets Datenfeld, das befüllt werden soll.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen. +
+→ Die Zahlenwerte der Spalte werden beim Import neu berechnet.
+
+[.collapseBox]
+.*_Beispiel:_* Preise um 5% erhöhen
+--
+
+*CSV columns*: [Spalte mit Preis wählen] +
+*Operator*: positive % +
+*Wert*: 5
+*plentymarkets Datenfeld*: [Verkaufspreis wählen]
+
+*_Ergebnis:_* Beim Import werden zu den Preisen in der angegebenen Spalte 5% addiert. Der höhere Preis wird als Verkaufspreis in plentymarkets gespeichert.
+--
 
 [#1510]
 === Zeilen einer Zuordnung für den Import aktivieren
@@ -370,7 +458,7 @@ Zeilen für den Import aktivieren:
 . Hake am linken Rand alle Zeilen an, die du beim Import berücksichtigen möchtest.
 . Klicke anschließend oben auf *Alle aktivieren* (icon:power-off[role="green"]). Mit Klick auf *Alle deaktivieren* (icon:power-off[role="red"]) kannst du die gewählten Zeilen auch wieder gesammelt deaktivieren.
 . Klicke alternativ auf *Zeile aktivieren* (icon:toggle-off[role="red"]) am rechten Rand, um Zeilen für den Import einzeln zu aktivieren.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (icon:save[set=material, role="darkGrey"]) die Einstellungen.
 
 [NOTE]
 .Ansicht in der Zuordnung
@@ -389,57 +477,6 @@ Mit Klick auf *Einstellungen* (icon:cog[role="black"]) in der Zuordnung werden d
 
 Wenn du mehrere Zuordnungen in einem Import pflegst, kannst du bestimmte Zuordnungen eines Imports in der Übersicht der Zuordnungen mit Klick auf die Umschaltfläche in der Spalte *Aktiv/Inaktiv* deaktivieren bzw. aktivieren. Neue Zuordnungen, die du erstellst, sind standardmäßig aktiv.
 
-[#1520]
-=== Werte mit der RegEx-Funktion ersetzen
-
-Damit eine CSV- oder TXT-Datei beim Import wie gewünscht berücksichtigt wird, kann die sog. RegEx-Funktion (Regular Expression) genutzt werden. Diese sorgt dafür, dass Daten anhand von Befehlen beim Import manipuliert werden und folglich in der CSV- oder TXT-Datei keine Änderungen mehr vorgenommen werden müssen. Lerne in diesem Video mehr über die Anwendung der RegEx-Funktion. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
-
-.Ändere deine Daten mit der ReEx-Funktion
-video::329090839[vimeo]
-
-Die zwei folgenden Beispiele sollen den Vorgang näher veranschaulichen.
-
-*Beispiel 1*: +
-*Input*: “24.12.2017” +
-*Search pattern*: /^(\d+)\.(\d+)\.(\d+)$/ +
-*Replace pattern*: $3﹣$2﹣$1 +
-*Result*: “2017-12-24”
-
-*Beispiel 2*: +
-*Input*: “Mustermann, Max” +
-*Search pattern*: /^(\w+), (\w+)$/ +
-*Replace pattern*: $2 $1 +
-*Result*: “Max Mustermann” +
-
-*Erläuterung der Beispiele*: +
-Ganz am Anfang steht das Input. Im ersten Schritt wird im sog. Search pattern das Muster eingefügt, nach dem gesucht werden soll. Anschließend wird dieses im sog. Replace pattern so modifiziert, wie es beim Import ausgegeben werden soll und als Result kommt das gewünschte Muster heraus, das schließlich in der CSV- oder TXT-Datei berücksichtigt wird.
-
-[.instruction]
-Werte ersetzen:
-
-. Öffne das Menü *Daten » Import*. +
-→ Die Import-Übersicht wird geöffnet.
-. Klicke auf einen Import. +
-→ Die Einstellungen werden geöffnet.
-. Wechsele in das Tab *Zuordnung*.
-. Klicke auf eine Zuordnung. +
-→ Die Zuordnung wird geöffnet.
-. Wähle im Feld *Quelle* die Option *Regulärer Ausdruck*. +
-→ Die Optionen für *Regulärer Ausdruck* werden geöffnet.
-. Gib im Feld *Wert* den Spaltennamen der CSV- oder TXT-Datei ein (z.B. Paketnummer, Auftrags-ID etc.).
-. Gib im Feld *Suchen* das Search pattern ein.
-. Gib im Feld *Ersetzen* das Replace pattern ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die Datenfelder werden aktualisiert.
-
-[NOTE]
-.Infos zu RegEx
-====
-Weitere Informationen zu RegEx findest du auf link:http://php.net/manual/en/reference.pcre.pattern.syntax.php[dieser^] oder link:https://regexr.com/[dieser^] Seite.
-Auf letzterer muss die Einstellung der RegEx engine auf PCRE umgestellt werden. Dies geschieht über das Dropdown-Menü oben rechts, in dem Javascript voreingestellt ist.
-====
-
 [#1520a]
 === Eigene Zuordnung
 
@@ -457,7 +494,7 @@ Eigene Zuordnung festlegen:
 → Die Zuordnung wird geöffnet.
 . Wähle im Dropdown-Menü des Felds *Quelle* die Option *Eigene Zuordnung*.
 . Fülle die Felder aus. Beachte dazu die Erläuterungen in <<tabelle-eigene-zuordnung>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (icon:save[set=material, role="darkGrey"]) die Einstellungen.
 
 [[tabelle-eigene-zuordnung]]
 .Eigene Zuordnung
@@ -525,7 +562,7 @@ Die eigene Zuordnung eignet sich für viele weitere Fälle. Dies gilt insbesonde
 Mithilfe von Filtern kannst du die Daten eingrenzen, die importiert werden. Die Filter findest du im Bereich *Zuordnung*.
 
 [NOTE]
-.Mehrere Filter sind durch Und verknüpft
+.Mehrere Filter sind durch "Und" verknüpft
 ====
 Wenn du mehrere Filter verwendest, werden nur Datensätze importiert, auf die alle Filter zutreffen. Es handelt sich also um eine Und-Verknüpfung der Filter.
 ====
@@ -595,16 +632,19 @@ Im Menü *Daten » Log* können die Erfolgs- und Fehlermeldungen von Importen ei
 [#1630]
 == Import kopieren
 
-Du kannst Importe einzeln oder mehrere gleichzeitig kopieren. So kannst du bereits gut konfigurierte Importe nutzen, um schnell einen neuen Import zu erstellen.
+// DONE!
+
+Du kannst einen oder mehrere Importe gleichzeitig kopieren. So kannst du gut konfigurierte Importe nutzen, um schnell einen neuen Import zu erstellen.
 
 [.instruction]
 Import kopieren:
 
 . Öffne das Menü *Daten » Import*. +
 → Die Import-Übersicht wird geöffnet.
-. Markiere einen oder mehrere Importe.
-. Klicke auf *Import kopieren*. +
-→ Der Import wurde kopiert. Einem kopierten Import wird *(copy)* hinzugefügt.
+. Aktiviere einen oder mehrere Importe.
+. Klicke auf *Import kopieren* (icon:content_copy[set=material]). +
+→ Der Import wird kopiert. +
+→ Der Name des kopierten Imports ist `Copy of [Name des Originalimports]`.
 
 [#1640]
 == Import und Export durchführen
@@ -621,17 +661,16 @@ Import und Export durchführen:
 . Öffne das Menü *Daten » Import*. +
 → Die Import-Übersicht wird geöffnet.
 . Markiere einen oder mehrere Importe.
-. Klicke auf *Format exportieren* (icon:download[role="purple"]). +
+. Klicke auf *Format exportieren* (icon:system_update_alt[set=material]). +
 → Der Import wird automatisch heruntergeladen.
-. Klicke auf *Format importieren* (icon:upload[role="purple"]). +
+. Klicke auf *Format importieren* (icon:open_in_browser[set=material]). +
 → Die Übersicht der Dateien wird geöffnet.
-. Klicke auf *Datei hochladen* (icon:upload[role="purple"]) und wähle eine Datei.
+. Klicke auf *Datei hochladen* (icon:upload[set=material]) und wähle eine Datei.
 . Markiere die Datei, die du hochladen möchtest und klicke auf *Wählen*. +
 → Es wird abgefragt, ob der Import ausgeführt werden soll.
-. Klicke auf *Ok*, um die Abfrage zu bestätigen. +
+. Klicke auf *OK*, um die Abfrage zu bestätigen. +
 → Es erscheint die Meldung, dass der Import aus einem anderen Mandanten stammt. +
 → Der Import wurde erfolgreich ausgeführt.
-
 
 [NOTE]
 .Importe aus einem anderen plentymarkets System importieren
@@ -649,21 +688,18 @@ Zum Importieren genügt die Zuordnung allein.
 [#1645]
 == Import abbrechen
 
-Im Menü *Daten » Status* kannst du den bereits gestarteten Import abbrechen. Die Funktion ist somit nur verfügbar, wenn der Import gerade verarbeitet wird.
+Im Menü *Daten » Status* kannst du einen gestarteten Import abbrechen. Die Funktion ist also nur verfügbar, wenn der Import gerade läuft.
 
 [.instruction]
 Import abbrechen:
 
 . Öffne das Menü *Daten » Status*. +
 → Die Status-Übersicht wird geöffnet. +
-icon:map-signs[] *_Oder:_* Öffne das Menü *Daten » Import*. +
-→ Die Import-Übersicht wird geöffnet.
-. Klicke auf *Status* (icon:bars[role="yellow"]). +
-→ Die Status-Übersicht wird geöffnet.
 . Klicke in der Zeile des Imports, den du abbrechen möchtest, ganz rechts auf *Import abbrechen* (icon:window-close[role="red"]). +
 → Ein Fenster mit einer Sicherheitsabfrage wird geöffnet.
 . Klicke auf *Import abbrechen*. +
-→ Der Import wird abgebrochen und nur die Zeilen, die zum Zeitpunkt des Abbruchs bereits importiert waren, befinden sich im System.
+→ Der Import wird abgebrochen. +
+→ Nur die Datensätze sind im System, die zum Zeitpunkt des Abbruchs schon importiert waren.
 
 [#1650]
 == Dateien schnell und einfach hochladen
@@ -845,9 +881,9 @@ Du hast einen Import aus Versehen gelöscht? Oder jemand hat an einem gut konfig
 *_Achtung:_*
 
 * Mit diesen Einstellungen setzt du die Importe selbst auf einen früheren Stand zurück. Du kannst so _keine ins System importieren Daten zurücksetzen_. Das geht auch, xref:daten:backup.adoc#[aber anders].
-* Es wird nur einmal täglich nachts ein Backup erstellt. Wenn du ein Backup importierst, werden die Daten auf diesen Stand zurückgesetzt.
-* Alle Importe werden zurückgesetzt. Du kannst also nicht nur einen einzigen Import zurücksetzen.
-* *_Beispiel:_* Jemand hat die Einstellungen des Imports für Artikeldaten aus Versehen geändert. Im Laufe des Tages wurde aber auch ein Import für Gutscheincodes erstellt. Wenn du das Backup der letzten Nacht einspielst, werden beide Importe auf den Stand der letzten Nacht zurückgesetzt. Der Import für Artikeldaten wird repariert. Der Import für Gutscheincodes wird aber gelöscht, weil er zum Zeitpunkt des Backups noch nicht existierte.
+* Backups werden nur einmal täglich nachts erstellt. Wenn du ein Backup importierst, werden die Daten auf diesen Stand zurückgesetzt.
+* Alle Importe werden zurückgesetzt. Du kannst also nicht nur einen einzigen Import zurücksetzen. +
+*_Beispiel:_* Jemand hat die Einstellungen des Imports für Artikeldaten aus Versehen geändert. Im Laufe des Tages wurde aber auch ein Import für Gutscheincodes erstellt. Wenn du das Backup der letzten Nacht einspielst, werden beide Importe auf den Stand der letzten Nacht zurückgesetzt. Der Import für Artikeldaten wird repariert. Der Import für Gutscheincodes wird aber gelöscht, weil er zum Zeitpunkt des Backups noch nicht existierte.
 
 [.instruction]
 Backups von Importen einspielen:
@@ -858,7 +894,7 @@ Backups von Importen einspielen:
 → Das Fenster *Backup importieren* wird angezeigt.
 . Wähle für die Einstellung *Backup importieren* die Option *Datenbank teilweise importieren*.
 . Aktiviere die Option *ElasticSync*. +
-*_Tipp:_* Das Import-Tool hieß früher mal *ElasticSync*. Deshalb heißt diese Option noch so.
+*_Tipp:_* Das Import-Tool hieß früher *ElasticSync*. Deshalb heißt diese Option noch so.
 . Klicke auf *Backup einspielen*. +
 → Alle Importe werden auf den Stand des Backups zurückgesetzt. +
 → Es gibt kein Zurück!
